fix invite button alignment

--- a/css/index.less
+++ b/css/index.less
@@ -1188,9 +1188,13 @@ ul.tags {
       border: 1px solid #ccc;
       background-color: #f6f6f6;
       margin-bottom: 30px;
+      line-height: 32px;
+
+      .button {
+        float:right;
+      }
     }
   }
-
 }
 
 #project-editor {
